# Voetbal

./: Aanvaller.cpp  Aanvaller.h  Actie.cpp  Actie.h  BalOnderscheppen.cpp  BalOnderscheppen.h  CMakeLists.txt  Keeper.cpp  Keeper.h  Loop.cpp  Loop.h  Middenvelder.cpp  Middenvelder.h  Opraap.cpp  Opraap.h  Pas.cpp  Pas.h  Redding.cpp  Redding.h  Schiet.cpp  Schiet.h  Speler.cpp  Speler.h  Takle.cpp  Takle.h  Team.cpp  Team.h  Verdediger.cpp  Verdediger.h  main.cpp
